feat(backend): add pagination when getting obstacles. Move sorting to db query